<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/alarm"
            android:title="@string/nav_alarm" />
        <item
            android:id="@+id/nav_mantram"
            android:icon="@drawable/omnew"
            android:title="@string/nav_mantram" />
        <item
            android:id="@+id/nav_temple"
            android:icon="@drawable/lotusflower"
            android:title="@string/nav_temple" />

        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/calendar"
            android:title="@string/nav_calendar" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us"
                android:icon="@drawable/thinking"
                />

        </menu>
    </item>

</menu>
